@@ -41,3 +41,6 @@ EXPORTS
 
     WgxSetTaskbarIconOverlay
     WgxRemoveTaskbarIconOverlay
+    
+    WgxCreateProcess
+    WgxCreateThread
